# repomanager

./: .gitignore  README.md  docker-compose.yml  index.html  pyproject.toml  pytest.ini  repomanager.ipynb  template.html
.github/workflows/: deployment.yml  linting.yml  tests.yml
repomanager/: Dockerfile  README.md  __init__.py  app.py  checks.py  filters.py  github.py  pyproject.toml  views.py
repomanager/github/: branch.py  models.py  repository.py  utils.py
repomanager/models/checks/: checks.py
repomanager/models/github/: github.py  repository.py  user.py
repomanager/repomanager/: __init__.py  app.py  middleware.py
repomanager/repomanager/models/github/: exceptions.py  github.py  repository.py  user.py
repomanager/repomanager/static/css/: icons.css  style.css
repomanager/repomanager/templates/: user.html
repomanager/repomanager/views/: auth.py  public.py  user.py
repomanager/static/: styles.css
repomanager/static/css/: buttons.css  tables.css  tabs.css
repomanager/static/img/: How To Create Tabs.html
repomanager/static/js/: tabs.js
repomanager/templates/: about.html  base-centered.html  base.html  comparison.html  error.html  home.html  login.html  repo.html  repos.html  unknownerror.html  user.html
repomanager/templates/layouts/: base.html
repomanager/tests/: conftest.py  test_middleware.py  test_views.py
repomanager/views/: auth.py  public.py  utils.py
server/: .gitignore  pyproject.toml
server/repomanager/models/github/: exceptions.py
src/repomanager/: __init__.py  errors.py
src/repomanager/models/github/: __init__.py  branch.py
src/repomanager/static/css/: buttons.css  tabs.css
src/repomanager/static/js/: filters.js
src/repomanager/templates/: repo.html  repos.html
src/repomanager/templates/layouts/: base-centered.html  base.html
src/repomanager/views/: __init__.py  auth.py  user.py
temp/: comparison.html  repomanager.ipynb
tests/: conftest.py  test_filters.py  test_views.py
webapp/: next.config.mjs  package-lock.json  package.json
webapp/.storybook/: main.js  preview.js
webapp/app/: globals.css  layout.js  page.js
webapp/app/(private)/: layout.js
webapp/app/(private)/[user]/: page.js
webapp/app/(public)/: layout.js  page.js
webapp/app/(public)/about/: page.js
webapp/app/(public)/login/: page.js
webapp/app/login/: page.js
webapp/components/: globals.css
webapp/components/Button/: Button.js  Button.module.css  Button.stories.js
webapp/components/Form/: Form.css  Form.js
webapp/components/Form/Form/: Form.css  Form.js  Form.module.css  Form.stories.js
webapp/components/Header/: Header.css  Header.js
webapp/components/Icon/: Icon.js  Icon.stories.js
webapp/components/Icons/BaseIcon/: BaseIcon.js  BaseIcon.module.css  BaseIcon.stories.js
webapp/components/Icons/BooleanIcon/: BooleanIcon.js  BooleanIcon.stories.js
webapp/components/Icons/LanguageIcon/: LanguageIcon.js  LanguageIcon.stories.js
webapp/components/Icons/StarCounter/: StarCounter.js  StarCounter.module.css  StarCounter.stories.js
webapp/components/Inputs/RadioInput/: RadioInput.js  RadioInput.stories.js
webapp/components/Inputs/TextInput/: TextInput.css  TextInput.js  TextInput.stories.js
webapp/components/Layouts/Header/: Header.css  Header.js  Header.module.css  Header.stories.js
webapp/components/Repositories/Repositories/: Repositories.js  Repositories.module.css  Repositories.stories.js
webapp/components/Repositories/RepositoriesTable/: RepositoriesTable.js  RepositoriesTable.module.css  RepositoriesTable.stories.js
webapp/components/Repositories/RepositoriesTableRow/: RepositoriesTableRow.js  RepositoriesTableRow.module.css  RepositoriesTableRow.stories.js
webapp/components/Repositories/RepositoriesTableRowCell/: RepositoriesTableRowCell.js  RepositoriesTableRowCell.module.css  (+1 more)
webapp/components/RepositoriesTable/: RepositoriesTable.js  RepositoriesTable.stories.js
webapp/components/RepositoriesTableRow/: RepositoriesTableRow.js  RepositoriesTableRow.stories.js
webapp/components/Repository/: Repository.js  Repository.module.css  Repository.stories.js
webapp/components/SimpleLink/: SimpleLink.js  SimpleLink.stories.js
webapp/components/UserOverview/: UserOverview.js  UserOverview.stories.js
webapp/components/UserRepositories/: UserRepositories.js  UserRepositories.stories.js
webapp/components/Utils/: DebugComponent.js  HeaderView.js
webapp/lib/: actions.js  cookies.js  fetch.js
(+36 files in other folders)
