### PROJECT
[project]
name = "repomanager"
version = "0.0.1"
description = "Manage GitHub repositories efficiently"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }
keywords = ["flask", "github"]
authors = [{ name = "Giorgio Caizzi", email = "giocaizzi@gmail.com" }]
maintainers = [{ name = "Giorgio Caizzi", email = "giocaizzi@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["dotenv", "flask", "pygithub"]

### OPTIONAL DEPENDENCIES
[project.optional-dependencies]
dev = []
tests = ["pytest", "pytest-cov"]

### URLS
[project.urls]
"Homepage" = "https://github.com/giocaizzi/repomanager/"
"Bug Reports" = "https://github.com/giocaizzi/repomanager/issues/"
"Source" = "https://github.com/giocaizzi/repomanager/"

### SCRIPTS
[project.scripts]
sample = "sample:main"

### SETUPTOOLS
[tool.setuptools]
packages = ["repomanager"]

### PYTEST
[tool.pytest.ini_options]
addopts = "--cov=./repomanager --cov-report=xml --cov-report=html"

### BLACK
[tool.black]
line-length = 79
