### BUILD SYSTEM
[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"


### PROJECT
[project]
name = "repomanager"
dynamic = ["version"]
description = "Manage GitHub repositories efficiently"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }
keywords = ["flask", "github"]
authors = [{ name = "Giorgio Caizzi", email = "giocaizzi@gmail.com" }]
maintainers = [{ name = "Giorgio Caizzi", email = "giocaizzi@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["python-dotenv", "flask", "pygithub"]

[tool.setuptools.packages.find]
where = ["repomanager"]
include = ["*"]

### DYNAMIC
[tool.setuptools.dynamic]
# version from __init__.py
version = { attr = "package.__version__" }

### OPTIONAL DEPENDENCIES
[project.optional-dependencies]
dev = ["black", "flake8", "flake8-rst-docstrings"]
tests = ["pytest", "pytest-cov"]

### URLS
[project.urls]
"Homepage" = "https://github.com/giocaizzi/repomanager/"
"Bug Reports" = "https://github.com/giocaizzi/repomanager/issues/"
"Source" = "https://github.com/giocaizzi/repomanager/"


### PYTEST
[tool.pytest.ini_options]
addopts = "--cov=./repomanager --cov-report=xml --cov-report=html"

### BLACK
[tool.black]
line-length = 79
