[tool.poetry]
name = "repomanager"
version = "0.1.0"
description = ""
authors = ["giocaizzi <giocaizzi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
python-dotenv = "^1.0.1"
pygithub = "^2.2.0"
flask-cors = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
flake8-rst-docstrings = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
